*********
Changelog
*********

Cogent 1.4.1 - 1.5
==================

New Features
------------

* added AlleleFreqs attribute to ensembl Variation objects.

Changes
-------

Bug Fixes
---------

Cogent 1.4 - 1.4.1
==================

New Features
------------

* Simplified getting genetic variation from Ensembl and provide the protein
  location of nonsynonymous variants.
* rate heterogeneity variants of pre-canned continuous time substitution
  models easier to define.
* Added implementation of generalised neighbour joining.
* New capabilities for examining genetic variants using Ensembl.
* Phylogenetic methods that can return collections of trees do so as a
  TreeCollections object, which has writeToFile and getConsensusTree methods.
* Added uclust application controller which currently supports uclust v1.1.579.

Changes
-------

* Major additions to Cookbook documentation courtesy of Tom Elliot. Thanks
  Tom!
* Improvements to parallelisation.

Bug Fixes
---------

Cogent 1.3 - 1.4
================

New Features
------------

* added support for manipulating and handling macromolecular structures.
  This includes a PDB file format parser, a hierarchical data structure
  to represent molecules. Various utilities to manipulate e.g. clean-up
  molecules, efficient surface area and proximity-contact calculation via
  cython. Expansion into unit-cells and crystal lattices is also possible.
* added a KD-Tree class for fast nearest neighbor look-ups.
  Supports k-nearest neighbours and all neighbours within radius queries
  currently only in 3D.
* added new tools for evaluating clustering stresses, goodness_of_fit.
  In cogent.cluster .
* added a new clustering tool, procrustes analysis.  In cogent.cluster .
* phylo.distance.EstimateDistances class has a new argument, modify_lf. This
  allows the use the modify the likelihood function, possibly constraining
  parameters, freeing them, setting bounds, pre-optimising etc..