@@ -95,11 +95,8 @@ We use the stable ID for *BRCA2*.
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> for gene in genes:
-    ...     if gene.Symbol == 'BRCA2':
-    ...         print gene
-    ...         break
+    >>> gene = human.getGeneByStableId(StableId='ENSG00000139618')
+    >>> print gene
     Gene(Species='Homo sapiens'; BioType='protein_coding'; Description='breast cancer 2,...'; StableId='ENSG00000139618'; Status='KNOWN'; Symbol='BRCA2')
 
 Find genes matching a description
@@ -125,8 +122,7 @@ We get the canonical transcripts for *BRCA2*.
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> brca2 = [gene for gene in genes][0]
+    >>> brca2 = human.getGeneByStableId(StableId='ENSG00000139618')
     >>> transcript = brca2.CanonicalTranscript
     >>> print transcript
     Transcript(Species='Homo sapiens'; CoordName='13'; Start=32889610; End=32973347; length=83737; Strand='+')
@@ -138,8 +134,7 @@ Get the CDS for a transcript
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> brca2 = [gene for gene in genes][0]
+    >>> brca2 = human.getGeneByStableId(StableId='ENSG00000139618')
     >>> transcript = brca2.CanonicalTranscript
     >>> cds = transcript.Cds
     >>> print type(cds)
@@ -154,8 +149,7 @@ Look at all transcripts for a gene
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> brca2 = [gene for gene in genes][0]
+    >>> brca2 = human.getGeneByStableId(StableId='ENSG00000139618')
     >>> for transcript in brca2.Transcripts:
     ...     print transcript
     Transcript(Species='Homo sapiens'; CoordName='13'; Start=32889610; End=32973347; length=83737; Strand='+')
@@ -170,8 +164,7 @@ We show just for the canonical transcript.
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> brca2 = [gene for gene in genes][0]
+    >>> brca2 = human.getGeneByStableId(StableId='ENSG00000139618')
     >>> print brca2.CanonicalTranscript.Exons[0]
     Exon(StableId=ENSE00001184784, Rank=1)
 
@@ -182,8 +175,7 @@ Inspect the genomic coordinate for a feature
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> brca2 = [gene for gene in genes][0]
+    >>> brca2 = human.getGeneByStableId(StableId='ENSG00000139618')
     >>> print brca2.Location.CoordName
     13
     >>> print brca2.Location.Start
@@ -237,8 +229,7 @@ We find the genetic variants for the canonical transcript of *BRCA2*.
 
     >>> from cogent.db.ensembl import Genome
     >>> human = Genome('human', Release=58, account=account)
-    >>> genes = human.getGenesMatching(StableId='ENSG00000139618')
-    >>> brca2 = [gene for gene in genes][0]
+    >>> brca2 = human.getGeneByStableId(StableId='ENSG00000139618')
     >>> transcript = brca2.CanonicalTranscript
     >>> print transcript.Variants
     (<cogent.db.ensembl.region.Variation object at ...
@@ -291,8 +282,7 @@ We first get the syntenic region corresponding to human gene *BRCA2*.
     >>> from cogent.db.ensembl import Compara
     >>> compara = Compara(['human', 'chimp', 'macaque'], Release=58,
     ...                  account=account)
-    >>> genes = compara.Human.getGenesMatching(StableId='ENSG00000139618')
-    >>> human_brca2 = [gene for gene in genes][0]
+    >>> human_brca2 = compara.Human.getGeneByStableId(StableId='ENSG00000139618')
     >>> regions = compara.getSyntenicRegions(region=human_brca2, align_method='EPO', align_clade='primates')
     >>> for region in regions:
     ...     print region
